# infernode

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENCE  NOTICE  QUICKSTART.md  README.md  RUN_TOUR.md  SECURITY.md  build-android-apk.sh  build-android-ndk-arm64.sh  build-android-ndk-x86_64.sh  build-android-termux.sh  build-dev-bundle.ps1  build-dev-bundle.sh  build-ios-app.sh  build-ios-arm64.sh  build-linux-amd64.sh  build-linux-arm64.sh  build-macos-headless.sh  build-macos-sdl3.sh  build-sdl3-android.sh  build-sdl3-ios.sh  build-windows-amd64.ps1  build-windows-sdl3.ps1  demo-gallery.sh  demo-live.sh  demo-overlay.sh  demo-player.sh  demo-video.sh  llmctl  mkfile  plan.md  project.yml  run-tests.sh  serve-llm.sh  setup-desktop.sh  (+4 more)
.clusterfuzzlite/: build.sh  fuzz_9p_messages.c  fuzz_dis_parser.c
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  requirements-security.txt
Linux/: infernode  infernode.desktop
android-app/: README.md  build.gradle.kts  gradle.properties  keystore.properties.example  settings.gradle.kts
appl/: NOTICE  mkfile
dis/: 2fa.dis  audiotone.dis  auditfs.dis  auditverify.dis  authnode.dis  awk.dis  bioget.dis  calendar9p.dis  charon.dis  cut.dis  dial.dis  gpusrv.dis  listen.dis  llmctl9p.dis  llmsrv.dis  lucibridge.dis  luciconv.dis  lucictx.dis  lucifer.dis  lucipres.dis  luciuisrv.dis  mail9p.dis  nsaudit.dis  scap.dis  sh.dis  speechtest.dis  styxlisten.dis  vid9p.dis  vision9p.dis  voicemode.dis
doc/: geo-map-design.md  llm-mount.md  matrix-architecture.md  (+4 more)
tools/vdec/: Cargo.toml  README.md  test-vdec.sh
tools/vdec/src/: lib.rs  main.rs
tools/vdet/: Cargo.toml
tools/vdet/src/: main.rs
(+1451 files in other folders)
